--- a/tablet_content.css
+++ b/tablet_content.css
@@ -1,17 +1,16 @@
-@media (max-width: 768px) {
+@media (max-width: 770px) {
     .wrapper__header {
         padding: 0 15px 0 15px;
         min-width: 320px;
         display: flex;
         flex-flow: wrap;
-        text-align: left;
+        text-align: center;
     }
     .header__ul li {
         margin-top: 25px;
         padding: 0 1.5em;
     }
     .wrapper__main {
-        min-width: 350px;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
